# file_search_engine

./: CMakeLists.txt  README.md
include/: ntfs_engine.hpp
src/: main.cpp
